hphp/test/zend/good/ext-mbstring/bug25140.php
<?php
var_dump( mb_convert_encoding( '', 'SJIS', 'EUC-JP' ) );
?>