hphp/test/zend/bad/ext/date/tests/date_create_from_format_basic2.php
<?php
var_dump(date_create_from_format('Y-m-d', '2009---01')); // invalid date
?>